# engine

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
src/: api.rs  auth.rs  config.rs  engine.rs  grounding.rs  jobs.rs  lib.rs  llm.rs  main.rs  multi_tenant.rs  nl.rs  normalization.rs  persistence.rs  projects.rs  structures.rs  taxonomy.rs
src/agent/: chunker.rs  ingester.rs  mod.rs  watcher.rs
tests/engine/: mod.rs
tests/integration/: mod.rs
tests/jobs/: mod.rs
tests/llm/: mod.rs
tests/multi_tenant/: mod.rs
tests/nl/: mod.rs
tests/normalization/: mod.rs
tests/projects/: mod.rs
tests/taxonomy/: mod.rs
