[package]
name = "cuemap-rust"
version = "0.2.1"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full", "signal"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
dashmap = "5.5"
uuid = { version = "1.6", features = ["v4", "serde"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
chrono = "0.4"
indexmap = { version = "2.1", features = ["serde"] }
clap = { version = "4.4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
